@startuml
skinparam classAttributeIconSize 0
hide circle
title AddTreatmentCommand Class Diagram

class AddTreatmentCommand {
    - {static} LOGGER : Logger
    + AddTreatmentCommand(pets : PetList)
    + exec(args : String) : void
}

interface "<<interface>>\nCommand" as Command {
    + exec(args : String) : void
}

class PetList {
    + getPetByName(name : String) : Pet
    + size() : int
    + get(index : int) : Pet
}

class Pet {
    - name : String
    - treatments : ArrayList<Treatment>
    + getName() : String
    + getTreatments() : ArrayList<Treatment>
    + addTreatment(treatment : Treatment) : void
}

class Treatment {
    - type : String
    - date : LocalDate
    - note : String
    - isCompleted : boolean
    + getType() : String
    + getDate() : LocalDate
    + isCompleted() : boolean
    + toString() : String
}

class Ui {
    + {static} printInvalidInputMessage(syntax : String) : void
    + {static} printHeader(header : String) : void
    + {static} printList(list : ArrayList) : void
}

Command <|.. AddTreatmentCommand
AddTreatmentCommand -down-> PetList : uses
AddTreatmentCommand ..> Ui : uses
PetList "1" *-- "*" Pet : contains
Pet "1" *-left- "*" Treatment : has

@enduml
